--------------------------------------------------------------------------------
 BNC VERSION 2.13.0 (xx.xx.xxxx) current
--------------------------------------------------------------------------------
    Added   (12.08.2016): resp. config keywords in context help
    Added   (08.08.2016): some informations about the data source is added as
                          comment within the header of RINEX navigation files
    Added   (21.07.2016): frequency specific signal priorities are added for
                          RINEX v3 to RINEX v2 conversion
    Added   (29.06.2016): consideration of provioder ID changes in SSR streams
                          during PPP analysis
    Added   (18.05.2016): expected observations in RINEX QC
    Changed (15.02.2017): SIRGAS2000 transformation parameters adjusted to IGb14
    Changed (10.04.2017): Transformation parameters for ITRF2005 to GDA94 removed
    Changed (10.04.2017): Transformation parameters for ITRF2008 to SIRGAS95 removed
    Changed (10.04.2017): Transformation parameters for ITRF2014 to GDA2020 added
    Changed (28.07.2016): small adaptations in qwtpolar sources to allow the
                          successful compilation of BNC on a Raspberry Pi, see
                          http://software.rtcm-ntrip.org/ticket/88
    Changed (21.07.2016): Default signal priority list
    Changed (08.06.2016): weighting factor for GLONASS phase observations
                          is now enlarged
    Changed (27.05.2016): RINEX 2.11 ephemeris output for an unknown
                          transmission time is set to 0.000000000000e+00
    Changed (23.05.2016): the real satellite visibility is considered now,
                          if the expected observations are computed in RINEX QC
    Changed (12.05.2016): limits for spherical harmonics degree and order extended
    Changed (28.04.2016): ephemeris upload is extended to allow an upload of more